build/log/idf_py_stdout_output_82090
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/build/bootloader/esp-idf/esptool_py && /Users/huyang/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/huyang/esp/v5.4.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/build/bootloader/bootloader.bin
Bootloader binary size 0x51c0 bytes. 0x2e40 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp32s3_camera_web.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/esp32s3_camera_web.c.obj 
/Users/huyang/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.2-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/build/config -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/main -I/Users/huyang/esp/v5.4.2/esp-idf/components/newlib/platform_include -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/config/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/config/include/freertos -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/config/xtensa/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/huyang/esp/v5.4.2/esp-idf/components/freertos/esp_additions/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/dma/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/ldo/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/heap/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/heap/tlsf -I/Users/huyang/esp/v5.4.2/esp-idf/components/log/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/soc/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/soc/esp32s3 -I/Users/huyang/esp/v5.4.2/esp-idf/components/soc/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/soc/esp32s3/register -I/Users/huyang/esp/v5.4.2/esp-idf/components/hal/platform_port/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/hal/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/hal/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_rom/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_rom/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_rom/esp32s3 -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_common/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_system/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_system/port/soc -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_system/port/include/private -I/Users/huyang/esp/v5.4.2/esp-idf/components/xtensa/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/xtensa/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/xtensa/deprecated_include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/include/apps -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/include/apps/sntp -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/lwip/src/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/port/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/port/freertos/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/huyang/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/components/camera_driver/include -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/managed_components/espressif__esp32-camera/driver/include -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/managed_components/espressif__esp32-camera/conversions/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/driver/deprecated -I/Users/huyang/esp/v5.4.2/esp-idf/components/driver/i2c/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/driver/touch_sensor/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/driver/twai/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_pm/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_ringbuf/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_gpio/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_pcnt/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_gptimer/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_spi/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_mcpwm/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_i2s/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_sdmmc/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/sdmmc/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_sdspi/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_sdio/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_dac/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_rmt/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_tsens/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_sdm/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_i2c/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_uart/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/vfs/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_ledc/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_parlio/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/managed_components/espressif__esp_jpeg/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_http_server/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/http_parser -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_event/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_wifi/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_wifi/include/local -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_phy/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_phy/esp32s3/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_netif/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/nvs_flash/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_partition/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/esp_http_client/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/json/cJSON -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/port/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/mbedtls/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/mbedtls/library -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/huyang/esp/v5.4.2/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/Users/huyang/esp/v5.4.2/esp-idf/components/spiffs/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web=. -fmacro-prefix-map=/Users/huyang/esp/v5.4.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp32s3_camera_web.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/esp32s3_camera_web.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp32s3_camera_web.c.obj -c /Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/main/esp32s3_camera_web.c
/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/main/esp32s3_camera_web.c: In function 'analyze_image_with_ai':
/Users/huyang/Desktop/esp32/shexiang/esp32s3_camera_web/main/esp32s3_camera_web.c:134:10: error: 'esp_http_client_config_t' has no member named 'skip_cert_verification'
  134 |         .skip_cert_verification = true,
      |          ^~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
